fix contrast on login/logout button

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -36,6 +36,24 @@ nav {
     padding: 10px 20px;
 }
 
+#loginButton, #logoutButton {
+    background-color: var(--primary-color);
+    color: black;
+    border-radius: 10px;
+    padding: 10px 10px;
+    font-weight: bold;
+    border: solid 2px black;
+}
+
+#loginButton:hover, #logoutButton:hover {
+    background-color: #76cc87;
+    color: black;
+    border-radius: 10px;
+    padding: 10px 10px;
+    font-weight: bold;
+    border: solid 2px black;
+}
+
 .brand {
     font-size: 2rem;
     text-shadow: var(--highlight-color) 2px 2px 4px;
